Customer selection, hall push update

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,10 @@
 <%= link_to "Products", products_path %>
 |
 <%= link_to "Tables", tables_path %>
+|
+<%= link_to "Halls", "/halls" %>
+|
+<%= link_to "Statistics", "/statistics" %>
 
 <hr />
 
