--- a/app/views/payments/_form.html.haml
+++ b/app/views/payments/_form.html.haml
@@ -6,12 +6,7 @@
         - @payment.errors.full_messages.each do |msg|
           %li= msg
 
-  .field
-    = label_tag :table
-    = text_field_tag "customer_table", "", :id => "table_field", :autocomplete => :off
-  .field
-    = label_tag :customer
-    = autocomplete_field_tag 'customer_name', '', url_for(:controller => :customers, :action => 'autocomplete_customer_name'), :update_elements => {:tid => '#table_field'}
+  = render 'customers/customer_selection'
 
 
   = f.hidden_field :type
